allure done